--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@
 /Makefile.old
 /MANIFEST
 /MANIFEST.bak
+/MANIFEST.SKIP
 /blib/
 /pm_to_blib
 /.build
 cover_db
 nytprof*
 /inc/
-README
-/Module-Reader-*
+/Module-Reader-*/
+/Module-Reader-*.tar.gz
+/Distar
