move test module to separate directory

--- a/maint/Makefile.PL.include
+++ b/maint/Makefile.PL.include
@@ -5,3 +5,5 @@ use Distar;
 use ExtUtils::MakeMaker 6.58;
 
 author 'haarg - Graham Knop (cpan:HAARG) <haarg@haarg.org>';
+
+manifest_include 't/test-data/lib' => '.pm';
